--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "npm-run-all": "^4.1.5",
         "typescript": "^4.7.4",
         "typescript-to-lua": "^1.7.1"
+    },
+    "dependencies": {
+        "valve-kv": "^1.2.1"
     }
 }
